# mailverify

./: README.md
.github/workflows/: ci.yml  release.yml
go/: README.md  go.mod
go/cmd/email-intel/: main.go
js/: README.md  package-lock.json  package.json
js/src/: cli.ts  index.ts
python/: README.md  pyproject.toml
python/src/email_intel/: __init__.py  cli.py
site/: next.config.ts  package-lock.json  package.json
site/src/pages/: index.tsx
site/src/styles/: globals.css
