[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-intel-py"
version = "1.0.2"
authors = [
  { name="Author", email="author@example.com" },
]
description = "Enterprise standard email intelligence and verification."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dnspython",
    "requests",
    "rich"
]

[project.scripts]
email-intel = "email_intel.cli:main"
